# Perspective

./: README.md
backend/: pyproject.toml
backend/app/: llm_config.py
backend/app/modules/: fact_check_tool.py  langgraph_builder.py  pipeline.py
backend/app/modules/bias_detection/: check_bias.py
backend/app/modules/chat/: get_rag_data.py  llm_processing.py
backend/app/modules/facts_check/: llm_processing.py
backend/app/modules/langgraph_nodes/: generate_perspective.py  judge.py  sentiment.py
backend/app/modules/vector_store/: chunk_rag_data.py
backend/app/routes/: routes.py
